# BmpVsJpg

./: .gitignore  CMakeLists.txt  LICENSE  README.md  SECURITY.md
.github/workflows/: ci.yml  codeql.yml  release.yml
BmpToJpg/: BmpToJpg.aps  BmpToJpg.cpp  BmpToJpg.dsw  BmpToJpg.h  BmpToJpg.rc  BmpToJpg.sln  BmpToJpg.vcxproj  BmpToJpgDlg.cpp  BmpToJpgDlg.h  JPEG.h  JpgToBmp.cpp  Resource.h  StdAfx.h  UpgradeLog.htm
BmpToJpg/Debug/: BmpToJpg.res
BmpVsJpg/: BmpVsJpg.aps  BmpVsJpg.cpp  BmpVsJpg.dsp  BmpVsJpg.dsw  BmpVsJpg.h  BmpVsJpg.rc  BmpVsJpg.sln  BmpVsJpg.vcxproj  BmpVsJpg.vcxproj.filters  BmpVsJpgDlg.cpp  BmpVsJpgDlg.h  CqOctree.cpp  Dib.cpp  Dib.h  Huffman.cpp  Huffman.h  IP.cpp  JCONFIG.H  Jmorecfg.h  Jpeg.cpp  Jpeg.h  Jpeglib2.lib  ReadMe.txt  StdAfx.cpp  StdAfx.h  TifHeader.h  UpgradeLog.htm  dibapi.cpp  dibapi.h  resource.h
BmpVsJpg/Debug/: BmpVsJpg.res  vc140.idb
BmpVsJpg/res/: BmpVsJpg.rc2
Change_Bmp_Jpg/: Change_Bmp_Jpg.sln
Change_Bmp_Jpg/Backup/: Change_Bmp_Jpg.sln
Change_Bmp_Jpg/BmpToJpg/: BmpToJpg.aps  BmpToJpg.clw  BmpToJpg.dsp  BmpToJpg.h  BmpToJpg.ilk  BmpToJpg.rc  BmpToJpg.vcxproj.filters  BmpToJpgDlg.cpp  BmpToJpgDlg.h  JpgToBmp.h  Resource.h
JpgToBmp/: BmpToJpg.aps  BmpToJpg.cpp  BmpToJpg.h  BmpToJpg.ilk  BmpToJpg.rc  BmpToJpg.sln  BmpToJpg.vcxproj  BmpToJpg.vcxproj.filters  BmpToJpgDlg.cpp  BmpToJpgDlg.h  StdAfx.cpp  resource.h
cli/: main.cpp
docs/: filter_showcase.html  quality_comparison.html
fuzz/: fuzz_bmp_reader.cpp  fuzz_decoder.cpp  generate_corpus.sh
qa/: generate_comparison.sh
tests/: roundtrip_test.cpp
(+69 files in other folders)
